--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,9 @@
     "angular-material-icons": "^0.7.0",
     "lightbox2": "^2.8.2",
     "angular-youtube-mb": "^1.2.0",
-    "angular-bootstrap": "~0.12.1"
+    "angular-bootstrap": "~0.12.1",
+    "angular-strap": "^2.3.9",
+    "angular-bootstrap-datetimepicker-directive": "^0.1.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3",
